fixed the z-index error in the dropdowwn map.

--- a/src/features/shared/components/AmountUnitField/AmountUnitField.scss
+++ b/src/features/shared/components/AmountUnitField/AmountUnitField.scss
@@ -1,3 +1,9 @@
 .base {
   background: red;
 }
+
+.unit{
+  & > div{
+    z-index: unset !important;
+  }
+}
